--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.3
-pandas==2.2.2
-openpyxl==3.1.5
-SQLAlchemy==2.0.34
-psycopg2-binary==2.9.9
+Flask
+pandas
+openpyxl
+SQLAlchemy
+psycopg2-binary
